scss: fix the filter panel not alignment issue
^fox-59240

--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -52,14 +52,13 @@
     li {
         word-break: break-all;
         line-height: 30px;
-        padding: 0 0 0 10px;
         &.active {
+            font-weight: 700;
+            border-radius: 0 10px 10px 0;
             @include themify($themes) {
                 background-color: themed('filterPanelActiveBackgroundColor');
                 color: themed('filterPanelActiveColor');
             }
-            font-weight: 700;
-            border-radius: 0 10px 10px 0;
             // make sure filter panel color won't be replaced by a child link color
             & a {
                 @include themify($themes) {
@@ -68,16 +67,33 @@
             }
         }
         &:hover {
+            border-left-color: rgba(103,103,103,.4);
+            border-radius: 0 10px 10px 0;
             @include themify($themes) {
                 background-color: themed('filterPanelHoverBackgroundColor');
                 color: themed('filterPanelHoverColor');
             }
-            border-left-color: rgba(103,103,103,.4);
-            border-radius: 0 10px 10px 0;
             // make sure filter panel color won't be replaced by a child link color
             & a {
                 @include themify($themes) {
                     color: themed('filterPanelHoverColor');
+                }
+            }
+        }
+        & > a {
+            margin-left: 10px;
+        }
+        & > div.d-flex {
+            margin-left: 10px;
+        }
+        & > ul.fa-ul.card-ul.carets {
+            display: flex;
+            flex-direction: column;
+            margin-left: 0 !important;
+            & > li > div.d-flex {
+                margin-left: 30px;
+                & > a.text-break > i {
+                    margin-right: 5px;
                 }
             }
         }
